--- a/gui/mainwindow.ui
+++ b/gui/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>400</height>
+    <width>850</width>
+    <height>450</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -68,45 +68,6 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
-         <widget class="QComboBox" name="comboBox_2">
-          <item>
-           <property name="text">
-            <string>Ruppert</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Bisección</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Lepp-Bisescción</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Centroide</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Lepp-Centroide</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Lepp-Delaunay</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Off-Center</string>
-           </property>
-          </item>
-         </widget>
-        </item>
         <item row="2" column="0">
          <widget class="QLabel" name="label_4">
           <property name="text">
@@ -121,25 +82,107 @@
           </property>
          </widget>
         </item>
-        <item row="3" column="0">
+        <item row="4" column="0">
          <widget class="QLabel" name="label_3">
           <property name="text">
            <string>Inserción en Borde</string>
           </property>
          </widget>
         </item>
-        <item row="3" column="1">
-         <widget class="QComboBox" name="comboBox_3"/>
+        <item row="4" column="1">
+         <widget class="QComboBox" name="comboBox_3">
+          <item>
+           <property name="text">
+            <string>Ruppert</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Rivara</string>
+           </property>
+          </item>
+         </widget>
         </item>
-        <item row="4" column="0">
+        <item row="5" column="0">
          <widget class="QLabel" name="label_5">
           <property name="text">
            <string>Inserción Restringida</string>
           </property>
          </widget>
         </item>
-        <item row="4" column="1">
-         <widget class="QComboBox" name="comboBox_4"/>
+        <item row="5" column="1">
+         <widget class="QComboBox" name="comboBox_4">
+          <item>
+           <property name="text">
+            <string>Ruppert</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Rivara</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QComboBox" name="comboBox_2">
+          <item>
+           <property name="text">
+            <string>Circumcenter</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Bisection</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Lepp-Bisection</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Centroid</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Lepp-Centroid</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Lepp-Delaunay</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Off-Center</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+        <item row="3" column="0">
+         <widget class="QLabel" name="label_9">
+          <property name="text">
+           <string>Tipo Inserción</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="1">
+         <widget class="QComboBox" name="comboBox_8">
+          <item>
+           <property name="text">
+            <string>Flip Diagonals</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Cavidad*</string>
+           </property>
+          </item>
+         </widget>
         </item>
        </layout>
       </widget>
@@ -156,7 +199,106 @@
          </widget>
         </item>
         <item row="0" column="1">
-         <widget class="QComboBox" name="comboBox_5"/>
+         <widget class="QComboBox" name="comboBox_5">
+          <item>
+           <property name="text">
+            <string>Circumcenter</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Bisection</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Lepp-Bisection</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Centroid</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Lepp-Centroid</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Lepp-Delaunay</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Off-Center</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+        <item row="2" column="0">
+         <widget class="QLabel" name="label_7">
+          <property name="text">
+           <string>Inserción en Borde</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="0">
+         <widget class="QLabel" name="label_8">
+          <property name="text">
+           <string>Inserción Restringida</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="1">
+         <widget class="QComboBox" name="comboBox_6">
+          <item>
+           <property name="text">
+            <string>Rupert</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Rivara</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+        <item row="3" column="1">
+         <widget class="QComboBox" name="comboBox_7">
+          <item>
+           <property name="text">
+            <string>Ruppert</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Rivara</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QComboBox" name="comboBox_9">
+          <item>
+           <property name="text">
+            <string>Flip Diagonal</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Cavidad*</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="label_10">
+          <property name="text">
+           <string>Tipo Inserción</string>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
@@ -173,6 +315,50 @@
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
       </property>
+      <widget class="QLabel" name="label_11">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>10</y>
+         <width>57</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Zoom</string>
+       </property>
+      </widget>
+      <widget class="QSlider" name="horizontalSlider">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>30</y>
+         <width>160</width>
+         <height>19</height>
+        </rect>
+       </property>
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+      <widget class="QTextEdit" name="textEdit">
+       <property name="geometry">
+        <rect>
+         <x>200</x>
+         <y>10</y>
+         <width>321</width>
+         <height>51</height>
+        </rect>
+       </property>
+       <property name="html">
+        <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Sans'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;54 Vértices&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;102 Triángulos&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+       </property>
+      </widget>
      </widget>
     </item>
    </layout>
@@ -182,7 +368,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>850</width>
      <height>23</height>
     </rect>
    </property>
